--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -1,10 +1,50 @@
 <html>
 <head>
-    <title>My Component Demo</title>
+    <title>Material Table Builder</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+    <style>
+      body {
+        font-family: 'Noto Sans', sans-serif;
+        background-color: #fff; 
+      }
+
+      .demo:before {
+        content: 'WORKING DEMO';
+        position: relative;
+        right: 10px;
+        color: #fff;
+        top: -40px;
+        background-color: #842e1f;
+        padding: 0px 5px;
+        font-size: 0.8rem;
+
+      }
+
+      .code:before {
+        content: 'CODE USED';
+        position: relative;
+        right: 10px;
+        color: #fff;
+        top: -40px;
+        background-color: #000;
+        padding: 0px 5px;
+        font-size: 0.8rem;
+
+      }
+
+      .hljs {
+        background-color: #fff !important;
+      }
+    </style>
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
